--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.1.0",
